tests/baselines/reference/APISample_watcher.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8910,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8910,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9170,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9170,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9520,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9520,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9544,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9544,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9631,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9631,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10818,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10818,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10828,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10828,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10903,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10903,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10960,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10960,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11014,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11014,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11034,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11034,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11044,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11044,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11078,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11078,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11081,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11081,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11085,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11085,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11103,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11103,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11132,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11132,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11144,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11144,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11219,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11219,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11251,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11251,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11255,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11255,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11328,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11328,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11560,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11560,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11562,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11562,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11564,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11564,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11566,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11566,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11664,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11664,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11666,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11666,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11668,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11668,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11670,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11670,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11746,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11746,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_watcher.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript/wiki/Using-the-Compiler-API#incremental-build-support-using-the-language-services
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var fs: {
        existsSync(path: string): boolean;
        readdirSync(path: string): string[];
        readFileSync(filename: string, encoding?: string): string;
        writeFileSync(filename: string, data: any, options?: { encoding?: string; mode?: number; flag?: string; } | string): void;
        watchFile(filename: string, options: { persistent?: boolean; interval?: number; }, listener: (curr: { mtime: Date }, prev: { mtime: Date }) => void): void;
    };
    declare var path: any;
    
    import * as ts from "typescript";
    
    function watch(rootFileNames: string[], options: ts.CompilerOptions) {
        const files: ts.MapLike<{ version: number }> = {};
    
        // initialize the list of files
        rootFileNames.forEach(fileName => {
            files[fileName] = { version: 0 };
        });
    
        // Create the language service host to allow the LS to communicate with the host
        const servicesHost: ts.LanguageServiceHost = {
            getScriptFileNames: () => rootFileNames,
            getScriptVersion: (fileName) => files[fileName] && files[fileName].version.toString(),
            getScriptSnapshot: (fileName) => {
                if (!fs.existsSync(fileName)) {
                    return undefined;
                }
    
                return ts.ScriptSnapshot.fromString(fs.readFileSync(fileName).toString());
            },
            getCurrentDirectory: () => process.cwd(),
            getCompilationSettings: () => options,
            getDefaultLibFileName: (options) => ts.getDefaultLibFilePath(options),
        };
    
        // Create the language service files
        const services = ts.createLanguageService(servicesHost, ts.createDocumentRegistry())
    
        // Now let's watch the files
        rootFileNames.forEach(fileName => {
            // First time around, emit all files
            emitFile(fileName);
    
            // Add a watch on the file to handle next change
            fs.watchFile(fileName,
                { persistent: true, interval: 250 },
                (curr, prev) => {
                    // Check timestamp
                    if (+curr.mtime <= +prev.mtime) {
                        return;
                    }
    
                    // Update the version to signal a change in the file
                    files[fileName].version++;
    
                    // write the changes to disk
                    emitFile(fileName);
                });
        });
    
        function emitFile(fileName: string) {
            let output = services.getEmitOutput(fileName);
    
            if (!output.emitSkipped) {
                console.log(`Emitting ${fileName}`);
            }
            else {
                console.log(`Emitting ${fileName} failed`);
                logErrors(fileName);
            }
    
            output.outputFiles.forEach(o => {
                fs.writeFileSync(o.name, o.text, "utf8");
            });
        }
    
        function logErrors(fileName: string) {
            let allDiagnostics = services.getCompilerOptionsDiagnostics()
                .concat(services.getSyntacticDiagnostics(fileName))
                .concat(services.getSemanticDiagnostics(fileName));
    
            allDiagnostics.forEach(diagnostic => {
                let message = ts.flattenDiagnosticMessageText(diagnostic.messageText, "\n");
                if (diagnostic.file) {
                    let { line, character } = diagnostic.file.getLineAndCharacterOfPosition(diagnostic.start!);
                    console.log(`  Error ${diagnostic.file.fileName} (${line + 1},${character + 1}): ${message}`);
                }
                else {
                    console.log(`  Error: ${message}`);
                }
            });
        }
    }
    
    // Initialize files constituting the program as all .ts files in the current directory
    const currentDirectoryFiles = fs.readdirSync(process.cwd()).
        filter(fileName=> fileName.length >= 3 && fileName.substr(fileName.length - 3, 3) === ".ts");
    
    // Start the watcher
    watch(currentDirectoryFiles, { module: ts.ModuleKind.CommonJS });
    